kubernetes/stripprefix.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dataconverter-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /dataconverter
