kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dataconverter
spec:
  selector:
    app: DataConverter
  ports:
    - port: 8000
